Implement patient-controlled access grant for doctor record access